# QtTWAIN

./: .gitignore  CMakeLists.txt  LICENSE  ProjectConfig.cmake.in  main.cpp  main.qml  scanengine.cpp  scanengine.h  twainapp.pro
cmake/: GenerateQtHeaders.cmake  QtTWAINCommon.cmake
examples/: CMakeLists.txt  scanengine.cpp
src/: CMakeLists.txt  QtTWAINConfig.cmake.in  qttwainglobal.h  qtwain_p.h  qtwaincontext.cpp  qtwaincontext_p.h  qtwaindefs.h  qtwaineventfilter.cpp  qtwaineventfilter_p.h  qtwainscanner.cpp  qtwainscanner.h  qtwainscanner_p.cpp  qtwainscanner_p.h  qtwainscannermanager.cpp  qtwainscannermanager.h
src/dsm/: qdsminterface.cpp  qdsminterface.h
